--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,7 @@
 #   gem 'sqlite3'
 development:
    adapter: mysql2
-   database: hospital_counselling
+   database: hospital_counselling_API
    encoding: utf8
    pool: 5
    username: root
